add: slider hover animation

--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -67,20 +67,36 @@ import "./scss/style.scss"
                   <div class="slider__item-block">
                     <img src="/images/works02/slider1.jpg" alt="">
                   </div>
+                  <div class="slider__item-cover">
+                    <h3>Rocket Launch</h3>
+                    <p>Our rocket launch services ensure the success of commercial satellites, scientific missions, and crewed space flights through advanced technology and precise planning. Each launch prioritizes safety and efficiency, catering to the diverse needs of our clients.</p>
+                  </div>
                 </li>
                 <li class="slider__item">
                   <div class="slider__item-block">
                     <img src="/images/works02/slider2.jpg" alt="">
+                  </div>
+                  <div class="slider__item-cover">
+                    <h3>Rocket Development</h3>
+                    <p>Through cutting-edge rocket development, we enable the next generation of space exploration. By developing reusable rockets and new propulsion technologies, we achieve cost-effective launches and expand access to space.</p>
                   </div>
                 </li>
                 <li class="slider__item">
                   <div class="slider__item-block">
                     <img src="/images/works02/slider3.jpg" alt="">
                   </div>
+                  <div class="slider__item-cover">
+                    <h3>Artificial Satellites</h3>
+                    <p>We design and develop advanced artificial satellites for various applications, including communications, Earth observation, and weather forecasting. Our satellites are known for their high precision and long lifespan, providing reliable performance to users worldwide.</p>
+                  </div>
                 </li>
                 <li class="slider__item">
                   <div class="slider__item-block">
                     <img src="/images/works02/slider4.jpg" alt="">
+                  </div>
+                  <div class="slider__item-cover">
+                    <h3>Rocket Engines</h3>
+                    <p>We are dedicated to the development and manufacturing of powerful and reliable rocket engines. Utilizing the latest combustion technology and materials science, our engines deliver optimal performance and safety, playing a crucial role in the success of missions.</p>
                   </div>
                 </li>
               </ul>
