--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -17,6 +17,16 @@ import "./scss/style.scss"
     <div class="canvas-wrapper">
       <canvas class="canvas"></canvas>
     </div>
+    <div class="loading">
+      <div class="loading__title">
+        <div class="loading__title-inner">
+          <p><span>Work02</span></p>
+          <span></span>
+          <p><span>Space Dev HP</span></p>
+        </div>
+      </div>
+      <div class="loading__inner"></div>
+    </div>
     <header class="header">
       <div class="header__logo">
         <h1>Works02</h1>
@@ -104,7 +114,7 @@ import "./scss/style.scss"
           </div>
           <div class="slider__option">
             <div class="slider__number">
-              <span><span class="numerator">1</span> / <span class="denominator"></span></span>
+              <span><span class="numerator">1</span> / <span class="denominator">4</span></span>
             </div>
             <div class="slider__time">
               <span class="slider__time--animation"></span>
