--- a/src/pages/works02/scss/keyframes.scss
+++ b/src/pages/works02/scss/keyframes.scss
@@ -1,11 +1,20 @@
-@keyframes sliderTimer {
+@keyframes scaleInText {
   0% {
-    width: 100%;
+    transform: scale(0);
   }
-  85% {
-    width: 0;
+  80% {
+    transform: scale(1.3);
   }
   100% {
-    width: 0;
+    transform: scale(1);
+  }
+}
+
+@keyframes scaleOutText {
+  0% {
+    transform: scale(8);
+  }
+  100% {
+    transform: scale(0);
   }
 }
