--- a/src/pages/works02/scss/style.scss
+++ b/src/pages/works02/scss/style.scss
@@ -32,6 +32,23 @@ body {
   bottom: 0;
 }
 
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: fit-content;
+}
+
+.loading__title {
+  font-size: 4vw;
+  text-align: center;
+}
+
+.loading__title.is-active {
+  @include scaleOutText();
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -70,6 +87,8 @@ body {
   width: 100%;
   height: 100%;
   font-family: melete;
+
+  opacity: 0;
 }
 
 .fv__content h1 {
