--- a/src/pages/works02/scss/keyframes.scss
+++ b/src/pages/works02/scss/keyframes.scss
@@ -12,9 +12,48 @@
 
 @keyframes scaleOutText {
   0% {
-    transform: scale(8);
+    transform: scale(4);
   }
   100% {
     transform: scale(0);
+  }
+}
+
+@keyframes sliderInText {
+  0% {
+    transform: translateY(100%) scale(1.2);
+  }
+  100% {
+    transform: translateY(0) scale(1);
+  }
+}
+
+@keyframes slideInTextClip {
+  0% {
+    -webkit-clip-path: inset(100% 0 0 0);
+    clip-path: inset(100% 0 0 0);
+    
+  }
+  100% {
+    -webkit-clip-path: inset(0);
+    clip-path: inset(0);
+  }
+}
+
+@keyframes growContent {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes rotate3d {
+  0% {
+    transform: rotate3d(1, 1, 1, 0);
+  }
+  100% {
+    transform: rotate3d(1, 4, 1, 360deg);
   }
 }
