--- a/src/pages/works02/scss/style.scss
+++ b/src/pages/works02/scss/style.scss
@@ -19,9 +19,10 @@
   src: url("/public/fonts/Nagoda.ttf") format("truetype");
 }
 
-body {
+html,body {
   font-family: melete;
   color: #333;
+  overflow: hidden;
 }
 
 .canvas-wrapper {
@@ -87,8 +88,6 @@ body {
   width: 100%;
   height: 100%;
   font-family: melete;
-
-  opacity: 0;
 }
 
 .fv__content h1 {
@@ -107,6 +106,7 @@ body {
 
 .fv__title-block {
   position: relative;
+  overflow: hidden;
 }
 
 .fv__title-block:not(:last-child) {
@@ -116,6 +116,11 @@ body {
 .fv__title-block span {
   display: block;
   font-size: 5vw;
+  transform: translateY(100%);
+}
+
+.fv__title-block.is-active span {
+  @include sliderInText(7.5);
 }
 
 .fv__title-block img {
@@ -137,12 +142,28 @@ body {
 
 .section__title {
   margin-bottom: 20px;
-  padding-bottom: 10px;
-  border-bottom: solid 1.5px #333;
+  overflow-y: hidden;
 }
 
 .section__title h2 {
   font-size: 3vw;
+  clip-path: inset(100% 0 0 0);
+  -webkit-clip-path: inset(100% 0 0 0);
+}
+
+.section__title.is-active h2 {
+  @include slideInTextClip(0);
+}
+
+.section__title span {
+  display: block;
+  width: 0;
+  padding-top: 10px;
+  border-bottom: solid 1.5px #333;
+}
+
+.section__title.is-active span {
+  @include growContent(0.5)
 }
 
 .slider {
@@ -173,9 +194,17 @@ body {
   transition: #{$duration}s #{$easing-transform};
 }
 
+@for $i from 0 through 10 {
+  .slider__list.is-active li:nth-child(#{$i}) {
+    @include slideInTextClip(0.2 * $i);
+  }
+}
+
 .slider__item {
   position: relative;
   cursor: pointer;
+  clip-path: inset(100% 0 0 0);
+  -webkit-clip-path: inset(100% 0 0 0);
 }
 
 .slider__item-block {
@@ -271,10 +300,16 @@ body {
 .mission__title {
   text-align: center;
   margin-bottom: 5vw;
+  overflow: hidden;
 }
 
 .mission__title h2 {
   font-size: 10vw;
+  transform: translateY(100%);
+}
+
+.mission__title.is-active h2 {
+  @include sliderInText(0);
 }
 
 .mission__text {
@@ -284,6 +319,19 @@ body {
 .mission__text p {
   font-family: nagoda;
   line-height: 4;
+}
+
+.mission__text span {
+  position: relative;
+  font-family: nagoda;
+  clip-path: inset(100% 0 0 0);
+  -webkit-clip-path: inset(100% 0 0 0);
+}
+
+@for $i from 0 through 500 {
+  .mission__text.is-active span:nth-child(#{$i}) {
+    @include slideInTextClip(0.01 * $i);
+  }
 }
 
 .technology__wrapper {
