--- a/src/pages/works02/scss/style.scss
+++ b/src/pages/works02/scss/style.scss
@@ -208,16 +208,17 @@ html,body {
 }
 
 .slider__item-block {
+  overflow: hidden;
   min-width: 300px;
   min-height: 500px;
   height: 100%;
+  border-radius: 16px;
 }
 
 .slider__item-block img {
   width: 100%;
-  height: 100%;
+  height: 110%;
   object-fit: cover;
-  border-radius: 16px;
 }
 
 .slider__item-cover {
