--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -50,6 +50,7 @@ import "./scss/style.scss"
             </div>
           </h1>
         </div>
+        <div class="circle--blur fv__circle"></div>
       </section>
       <section class="mission section">
         <div class="mission__title">
@@ -58,7 +59,7 @@ import "./scss/style.scss"
         <div class="mission__text">
           <p>Our mission is to explore the limitless possibilities of space to pave the way for humanity's future. Using cutting-edge technology, we venture into uncharted frontiers, develop extraterrestrial resources, and build a sustainable space economy. Our projects not only enhance life on Earth but also inspire the next generation of scientists, engineers, and explorers. We are undertaking a variety of missions from low Earth orbit to the Moon and beyond, including Mars. Our initiatives include "Project Starlink," a low Earth orbit satellite network providing high-speed internet to underserved regions; "Lunar Gateway," a lunar orbiting station serving as a base for lunar exploration and Mars missions; "Mars Colony 1," an ambitious endeavor to establish a permanent human colony on Mars; and "Asteroid Mining Initiative," which aims to harness extraterrestrial resources. Through these projects, we are building a sustainable future in space. Our efforts are grounded in international partnerships and the spirit of collaboration. By working with DEMO, various space agencies, and cutting-edge companies worldwide, we share innovative technologies and ideas to achieve monumental goals together. Our mission paves the way for humanity to explore new frontiers and pursue the infinite possibilities they offer. With our eyes set on the future, we challenge ourselves daily. The human quest for discovery knows no bounds, reaching to the very edges of the cosmos. Join us as we embark on this journey into the unknown.</p>
         </div>
-        <div class="circle__blur mission__circle"></div>
+        <div class="circle--blur mission__circle"></div>
       </section>
       <section class="works section">
         <div class="section__title">
@@ -174,5 +175,6 @@ import "./scss/style.scss"
       </div>
     </footer>
     <script src="./ts/script.ts"></script>
+    <script src="./ts/animations.ts"></script>
   </body>
 </html>
