add: technology animation

--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -131,26 +131,47 @@ import "./scss/style.scss"
           <span></span>
         </div>
         <div class="technology__wrapper">
-          <div class="technology__item item-1">
+          <div class="technology__item">
             <div class="technology__box">
-              <h3>Rocket Technology</h3>
+              <div class="technology__title">
+                <h3>Rocket Technology</h3>
+              </div>
               <p>We develop state-of-the-art rockets designed for efficiency and reliability, enabling cost-effective missions to low Earth orbit, the Moon, and Mars. Our rocket technology features reusable boosters and advanced propulsion systems, forming the foundation for sustainable space exploration. This innovative solution supports a wide range of applications, including commercial missions, scientific research, and crewed spaceflights. &#x1f680;</p>
             </div>
-            <img src="/images/works02/image2.jpg" alt="">
+            <div class="technology__content">
+              <div class="technology__image">
+                <img src="/images/works02/image2.jpg" alt="">
+              </div>
+              <div class="circle--blur technology__circle"></div>
+            </div>
           </div>
-          <div class="technology__item item-2">
+          <div class="technology__item">
             <div class="technology__box">
-              <h3>Satellite Technology</h3>
+              <div class="technology__title">
+                <h3>Satellite Technology</h3>
+              </div>
               <p>Our advanced satellite technology provides global connectivity and sophisticated Earth observation, revolutionizing communication and data collection methods. Our satellites are equipped with high-precision sensors and durable designs, ensuring stable performance over long durations. This allows us to meet diverse needs in scientific research and commercial applications, unlocking new possibilities in remote sensing and environmental monitoring. &#x1f6f0;</p>
             </div>
-            <img src="/images/works02/image2.jpg" alt="">
+            <div class="technology__content">
+              <div class="technology__image">
+                <img src="/images/works02/image2.jpg" alt="">
+              </div>
+              <div class="circle--blur technology__circle"></div>
+            </div>
           </div>
-          <div class="technology__item item-3">
+          <div class="technology__item">
             <div class="technology__box">
-              <h3>Collaboration</h3>
+              <div class="technology__title">
+                <h3>Collaboration</h3>
+              </div>
               <p>We partner with international space agencies, leading universities, and private companies to innovate and achieve groundbreaking space exploration goals. These collaborations promote the sharing of technologies and joint development, leveraging expertise and resources from around the world to achieve greater accomplishments. Our spirit of cooperation serves as a powerful driving force in shaping the future of space exploration. &#x1f91d;</p>
             </div>
-            <img src="/images/works02/image2.jpg" alt="">
+            <div class="technology__content">
+              <div class="technology__image">
+                <img src="/images/works02/image2.jpg" alt="">
+              </div>
+              <div class="circle--blur technology__circle"></div>
+            </div>
           </div>
         </div>
       </section>
