--- a/src/pages/works02/scss/style.scss
+++ b/src/pages/works02/scss/style.scss
@@ -41,6 +41,7 @@ html,body {
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: -1;
 }
 
 .loading {
@@ -180,7 +181,7 @@ html,body {
 }
 
 .section__title h2 {
-  font-size: 3vw;
+  font-size: 4vw;
   clip-path: inset(100% 0 0 0);
   -webkit-clip-path: inset(100% 0 0 0);
 }
@@ -384,62 +385,104 @@ html,body {
   transition: #{$duration}s 0.5s;
 }
 
+.technology {
+  
+}
+
 .technology__wrapper {
-  display: grid;
-  grid-template-rows: 50vh 50vh;
-  grid-template-columns: 48% 1fr;
-  gap: 16px;
+  font-family: nagoda;
 }
 
 .technology__item {
-  position: relative;
+  margin: auto;
+  display: flex;
+  gap: 3rem;
+  max-width: 1500px;
+  padding: 10rem 0;
 }
 
-.technology__item.item-1 {
-  grid-row: 1 / 3;
-  grid-column: 1 / 2;
+.technology__item:last-child {
+  padding-bottom: 10rem;
 }
 
-.technology__item.item-2 {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
-}
-
-.technology__item.item-3 {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-}
-
-.technology__item img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 16px;
+.technology__item:nth-child(even) {
+  .technology__box {
+    order: 1;
+  }
 }
 
 .technology__box {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-
-  padding: 1vw;
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  border-radius: 16px;
-  // background-color: #333;
-  word-break: break-word;
+  width: calc(100% - 500px - 3rem);
 }
 
-.technology__box h3 {
-  font-size: 2vw;
-  margin-bottom: 3vw;
+.technology__title h3 {
+  font-size: 4vw;
+  margin-bottom: 30px;
+  clip-path: inset(100% 0 0 0);
+  -webkit-clip-path: inset(100% 0 0 0);
+}
+
+.technology__title.is-active h3 {
+  @include slideInTextClip(0);
 }
 
 .technology__box p {
   line-height: 3;
-  font-family: nagoda;
+}
+
+.technology__content {
+  position: relative;
+  width: 50%;
+}
+
+.technology__image {
+  transform: rotate(60deg) translateX(80px);
+  opacity: 0;
+}
+
+.technology__image.is-active {
+  @include slideInRotation();
+}
+
+.technology__image:nth-child(even) {
+  order: 0;
+}
+
+.technology__image img {
+  width: 100%;
+  height: 100%;
+  max-width: 500px;
+  max-height: 330px;
+  border-radius: 16px;
+}
+
+.technology__shadow {
+  margin: auto;
+  width: 10%;
+  height: 10px;
+  background-color: #333;
+  border-radius: 50%;
+  filter: blur(5px);
+}
+
+.technology__circle {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.technology__circle {
+  width: 20vw;
+  height: 20vw;
+}
+
+.technology__circle.is-active {
+  width: 40vw;
+  height: 40vw;
+  opacity: 1;
+  transition: #{$duration}s 0.5s;
 }
 
 .contact {
