--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -136,7 +136,9 @@ import "./scss/style.scss"
               <div class="technology__title">
                 <h3>Rocket Technology</h3>
               </div>
-              <p>We develop state-of-the-art rockets designed for efficiency and reliability, enabling cost-effective missions to low Earth orbit, the Moon, and Mars. Our rocket technology features reusable boosters and advanced propulsion systems, forming the foundation for sustainable space exploration. This innovative solution supports a wide range of applications, including commercial missions, scientific research, and crewed spaceflights. &#x1f680;</p>
+              <div class="technology__text">
+                <p>We develop state-of-the-art rockets designed for efficiency and reliability, enabling cost effective missions to low Earth orbit, the Moon, and Mars. Our rocket technology features reusable boosters and advanced propulsion systems, forming the foundation for sustainable space exploration. This innovative solution supports a wide range of applications, including commercial missions, scientific research, and crewed spaceflights.</p>
+              </div>
             </div>
             <div class="technology__content">
               <div class="technology__image">
@@ -150,7 +152,9 @@ import "./scss/style.scss"
               <div class="technology__title">
                 <h3>Satellite Technology</h3>
               </div>
-              <p>Our advanced satellite technology provides global connectivity and sophisticated Earth observation, revolutionizing communication and data collection methods. Our satellites are equipped with high-precision sensors and durable designs, ensuring stable performance over long durations. This allows us to meet diverse needs in scientific research and commercial applications, unlocking new possibilities in remote sensing and environmental monitoring. &#x1f6f0;</p>
+              <div class="technology__text">
+                <p>Our advanced satellite technology provides global connectivity and sophisticated Earth observation, revolutionizing communication and data collection methods. Our satellites are equipped with high-precision sensors and durable designs, ensuring stable performance over long durations. This allows us to meet diverse needs in scientific research and commercial applications, unlocking new possibilities in remote sensing and environmental monitoring.</p>
+              </div>
             </div>
             <div class="technology__content">
               <div class="technology__image">
@@ -164,7 +168,9 @@ import "./scss/style.scss"
               <div class="technology__title">
                 <h3>Collaboration</h3>
               </div>
-              <p>We partner with international space agencies, leading universities, and private companies to innovate and achieve groundbreaking space exploration goals. These collaborations promote the sharing of technologies and joint development, leveraging expertise and resources from around the world to achieve greater accomplishments. Our spirit of cooperation serves as a powerful driving force in shaping the future of space exploration. &#x1f91d;</p>
+              <div class="technology__text">
+                <p>We partner with international space agencies, leading universities, and private companies to innovate and achieve groundbreaking space exploration goals. These collaborations promote the sharing of technologies and joint development, leveraging expertise and resources from around the world to achieve greater accomplishments. Our spirit of cooperation serves as a powerful driving force in shaping the future of space exploration.</p>
+              </div>
             </div>
             <div class="technology__content">
               <div class="technology__image">
@@ -176,14 +182,15 @@ import "./scss/style.scss"
         </div>
       </section>
       <section class="contact section">
-        <div class="contact__title">
+        <div class="section__title contact__title">
           <h2>Contact</h2>
         </div>
         <div class="contact__wrapper">
           <div class="contact__text">
-            <p>If you have any questions or need further information, please do not hesitate to contact us. We are always here to assist you and look forward to hearing from you soon. &#x1f4e9;</p>
+            <p>If you have any questions or need further information, please do not hesitate to contact us. We are always here to assist you and look forward to hearing from you soon.</p>
           </div>
         </div>
+        <div class="circle--blur contact__circle"><img src="/images/works02/right-arrow.svg" alt="right-arrow"></div>
       </section>
     </main>
     <footer class="footer">
