--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -120,9 +120,6 @@ import "./scss/style.scss"
               <span class="slider__time--animation"></span>
             </div>
           </div>
-          <div class="slider__button button">
-            <button>Read More</button>
-          </div>
         </div>
       </section>
       <section class="technology section">
@@ -195,7 +192,7 @@ import "./scss/style.scss"
     </main>
     <footer class="footer">
       <div class="footer__title">
-        <h2>Thank you for checking it out!</h2>
+        <h2><span>Thank you for</span> <span>checking it out!</span></h2>
       </div>
       <div class="footer__text">
         <p>The images are sourced from <a href="https://unsplash.com/" target="_blank" rel="noopener noreferrer">Unsplash</a>. &#x1f4f8;</p>
