--- a/src/pages/works02/scss/style.scss
+++ b/src/pages/works02/scss/style.scss
@@ -27,6 +27,26 @@ html,body {
   overflow: hidden;
 }
 
+html.lenis, html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
+}
+
 .circle--blur {
   width: 40vw;
   height: 40vw;
@@ -57,6 +77,7 @@ html,body {
 .loading__title {
   font-size: 4vw;
   text-align: center;
+  transform: scale(4);
 }
 
 .loading__title.is-active {
@@ -535,6 +556,7 @@ html,body {
   position: absolute;
   top: -150px;
   left: -150px;
+  z-index: -1;
 
   display: flex;
   align-items: center;
@@ -572,6 +594,15 @@ html,body {
   font-size: 13vw;
   font-family: nagoda;
   color: #fff;
+}
+
+.footer__title span {
+  clip-path: inset(100% 0 0 0);
+  -webkit-clip-path: inset(100% 0 0 0);
+}
+
+.footer__title.is-active span {
+  @include slideInTextClip(0);
 }
 
 .footer__text {
