不要なファイルの削除

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,32 +16,11 @@ import "./style.css"
 	<body>
 		<main>
 			<div>
-				<h1>Loading</h1>
-				<ul>
-					<li><a href="/loading/loading1">loading1</a></li>
-					<li><a href="/loading/loading2">loading2</a></li>
-					<li><a href="/loading/loading3">loading3</a></li>
-				</ul>
-			</div>
-
-			<div>
-				<h1>Hover</h1>
-				<ul>
-					<li><a href="/hover/hover1">hover1</a></li>
-				</ul>
-			</div>
-	
-			<div>
-				<h1>Slider</h1>
-				<ul>
-					<li><a href="/slider/slider1">slider1</a></li>
-				</ul>
-			</div>
-
-			<div>
 				<h1>Works</h1>
 				<ul>
 					<li><a href="/works01">works01</a></li>
+					<li><a href="/works02">works02</a></li>
+					<li><a href="/works03">works03</a></li>
 				</ul>
 			</div>
 		</main>
