--- a/src/pages/works03/index.astro
+++ b/src/pages/works03/index.astro
@@ -1,47 +1,22 @@
 ---
-import "../../styles/sass/styles.scss"
-import "./scss/style.scss"
-import { ACCESSORY_DATA } from "./ts/constants"
+import { ACCESSORY_DATA } from "./ts/constants";
+import Layout from "./components/Layout.astro";
 ---
 
-<!doctype html>
-<html lang="ja">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Works03</title>
-	</head>
-	<body>
-    <div class="webgl"></div>
-    <header class="header">
-      <div class="header__logo">
-        <h1>Works03</h1>
+<Layout>
+  <main id="swup" class="transition-fade">
+    <div class="wrapper">
+      <div class="title">
+        <h2>Accessory</h2>
+        <span></span>
       </div>
-    </header>
-    <main>
-      <div class="wrapper">
-        <div class="title">
-          <h2>Accessory</h2>
-          <span></span>
-        </div>
-        <ul class="list">
-          { ACCESSORY_DATA.map((data) => (
-            <li class="item">
-              <a href="#">
-                <div class="item-image"><img src={data.image} alt=""></div>
-                <div class="item-desc">
-                  <div class="item-title">
-                    <h3></h3>
-                  </div>
-                </div>
-              </a>
-            </li>
-          )) }
-        </ul>
-      </div>
-    </main>
-  </body>
-</html>
+      <ul class="list">
+        { ACCESSORY_DATA.map((data) => (
+          <li class="item transition-slide-out">
+            <a href={data.link}><div class="item-image"><img src={data.image} alt=""></div></a>
+          </li>
+        )) }
+      </ul>
+    </div>
+  </main>
+</Layout>
