--- a/src/pages/works03/scss/style.scss
+++ b/src/pages/works03/scss/style.scss
@@ -1,8 +1,11 @@
+@use "./variables.scss" as *;
+@use "./animation.scss" as *;
+@use "./keyframes.scss" as *;
+
 @font-face {
   font-family: "luxurious";
   src: url("/public/fonts/Luxurious.ttf") format("truetype");
 }
-
 
 @font-face {
   font-family: "nagoda";
@@ -35,7 +38,7 @@ body {
   font-weight: 600;
 }
 
-.wrapper {
+main {
   padding: 10rem;
 }
 
@@ -67,4 +70,13 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+html .item.transition-slide-out {
+  -webkit-clip-path: inset(0);
+  clip-path: inset(0);
+}
+
+html.is-animating .item.transition-slide-out {
+  @include slideOutTextClip(0);
 }
