--- a/src/pages/works03/scss/style.scss
+++ b/src/pages/works03/scss/style.scss
@@ -16,6 +16,20 @@ body {
   font-family: nagoda;
 }
 
+.webgl {
+  width: 100%;
+  height: 100%
+}
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -70,6 +84,7 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  opacity: 0;
 }
 
 html .item.transition-slide-out {
