feat: contact section

--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -187,7 +187,7 @@ import "./scss/style.scss"
             <p>If you have any questions or need further information, please do not hesitate to contact us. We are always here to assist you and look forward to hearing from you soon.</p>
           </div>
         </div>
-        <div class="circle--blur contact__circle"><img src="/images/works02/right-arrow.svg" alt="right-arrow"></div>
+        <div class="contact__circle"><img src="/images/works02/right-arrow.svg" alt="right-arrow"></div>
       </section>
     </main>
     <footer class="footer">
