--- a/src/pages/works02/scss/style.scss
+++ b/src/pages/works02/scss/style.scss
@@ -21,13 +21,15 @@
   src: url("/public/fonts/Nagoda.ttf") format("truetype");
 }
 
-html,body {
+html,
+body {
   font-family: melete;
   color: #333;
   overflow: hidden;
 }
 
-html.lenis, html.lenis body {
+html.lenis,
+html.lenis body {
   height: auto;
 }
 
@@ -50,7 +52,7 @@ html.lenis, html.lenis body {
 .circle--blur {
   width: 40vw;
   height: 40vw;
-  background-color: #5F3AFF;
+  background-color: #5f3aff;
   border-radius: 50%;
   filter: blur(9vw);
   opacity: 0;
@@ -221,7 +223,7 @@ html.lenis, html.lenis body {
 }
 
 .section__title.is-active span {
-  @include growContent(0.5)
+  @include growContent(0.5);
 }
 
 .slider {
@@ -409,7 +411,6 @@ html.lenis, html.lenis body {
 }
 
 .technology {
-  
 }
 
 .technology__wrapper {
@@ -553,6 +554,13 @@ html.lenis, html.lenis body {
 }
 
 .contact__circle {
+  width: 40vw;
+  height: 40vw;
+  background-color: #5f3aff;
+  border-radius: 50%;
+  filter: blur(9vw);
+  opacity: 0;
+
   position: absolute;
   top: -150px;
   left: -150px;
@@ -567,9 +575,6 @@ html.lenis, html.lenis body {
   filter: none;
 
   pointer-events: none;
-  transform: translate(var(--stalkerX),var(--stalkerY));
-  transition: all #{$duration}s;
-  will-change: transform opacity;
 }
 
 .contact__circle.is-active {
