--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,7 @@ import "./style.css"
 					<li><a href="/works01">works01</a></li>
 					<li><a href="/works02">works02</a></li>
 					<li><a href="/works03">works03</a></li>
+					<li><a href="/works04">works04</a></li>
 				</ul>
 			</div>
 		</main>
