--- a/src/pages/works04/index.astro
+++ b/src/pages/works04/index.astro
@@ -24,6 +24,9 @@ import "./scss/style.scss"
       <section>
         <h1>Section3</h1>
       </section>
+      <section>
+        <h1>Section4</h1>
+      </section>
     </main>
     <script src="./ts/script.ts"></script>
   </body>
