add: parallax img

--- a/src/pages/works04/index.astro
+++ b/src/pages/works04/index.astro
@@ -15,17 +15,56 @@ import "./scss/style.scss"
 	</head>
 	<body>
     <main>
-      <section>
-        <h1>Section1</h1>
+      <section class="hero">
+        <div class="hero-inner">
+          <h1>Welcome to TOKYO</h1>
+        </div>
+        <h1></h1>
       </section>
       <section>
-        <h1>Section2</h1>
+        <div class="wrapper">
+          <div class="content">
+            <h2>SHIBUYA</h2>
+            <p>Shibuya is one of Tokyo's most vibrant areas and a hub for shopping and entertainment. Here, you can witness the famous Shibuya Scramble Crossing, where hundreds of people cross the street at once. Known as a hotspot for youth culture, Shibuya is filled with shops and cafes that showcase the latest fashion trends. Don’t miss the Shibuya Center-Gai and the 109 shopping mall. At night, the neon lights illuminate the streets, and the area comes alive with bars and clubs.</p>
+          </div>
+          <p></p>
+        </div>
       </section>
       <section>
-        <h1>Section3</h1>
+        <div class="wrapper">
+          <div class="content">
+            <h2>NAKMEGURO</h2>
+            <p>Nakameguro is known for its relaxed atmosphere and stylish establishments. The Meguro River, lined with cherry trees, offers stunning cherry blossoms in the spring. The area is perfect for a leisurely stroll, with unique cafes, restaurants, and boutiques. The commercial facility under the Nakameguro railway tracks and the weekend flea markets are also popular. Nakameguro provides a glimpse of another side of Tokyo, with its laid-back and trendy vibe.</p>
+          </div>
+          <p></p>
+        </div>
       </section>
       <section>
-        <h1>Section4</h1>
+        <div class="wrapper">
+          <div class="content">
+            <h2>AKIHABARA</h2>
+            <p>Akihabara, historically known as an electronics district, is now also famous as the center of otaku culture. You can find the latest electronics and gadgets in the many shops here. It's also a haven for anime, manga, and gaming enthusiasts, with numerous specialized stores. Theme cafes, such as maid cafes, offer unique experiences. Akihabara is an exciting area where technology and pop culture merge.</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="wrapper">
+          <div class="content">
+            <h2>ASAKUSA</h2>
+            <p>Asakusa is an area rich in Tokyo’s history and tradition. Here, you can visit Sensō-ji, Tokyo’s oldest temple. Enter through the Kaminarimon gate, stroll down Nakamise Street lined with souvenir shops and food stalls, and make your way to the main hall. Asakusa offers experiences such as traditional boat rides and rickshaw tours, allowing you to immerse yourself in Japan's cultural heritage. Additionally, the observation deck at the Asakusa Culture and Tourist Information Center provides a great view of the Tokyo Skytree and the surrounding scenery.</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="wrapper">
+          <div class="content">
+            <h2>ODAIBA</h2>
+            <p>Odaiba is a man-made island in Tokyo Bay that offers shopping, entertainment, and relaxation. The area features commercial facilities like the Fuji TV building, DiverCity Tokyo Plaza, and Decks Tokyo Beach. Odaiba also has popular attractions such as the Rainbow Bridge and a replica of the Statue of Liberty. At night, you can enjoy beautiful cityscapes and spend a romantic evening on the Ferris wheel or a cruise.</p>
+          </div>
+        </div>
+      </section>
+      <section class="end">
+        <p>END</p>
       </section>
     </main>
     <script src="./ts/script.ts"></script>
