add: slideIn animation

--- a/src/pages/works04/index.astro
+++ b/src/pages/works04/index.astro
@@ -68,5 +68,6 @@ import "./scss/style.scss"
       </section>
     </main>
     <script src="./ts/script.ts"></script>
+    <script src="./ts/animation.ts"></script>
   </body>
 </html>
