add: side scroll animation

--- a/src/pages/works04/index.astro
+++ b/src/pages/works04/index.astro
@@ -63,6 +63,17 @@ import "./scss/style.scss"
           </div>
         </div>
       </section>
+      <section class="slider">
+        <div class="slider-inner">
+          <ul class="slider-list">
+            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
+          </ul>
+        </div>
+      </section>
       <section class="end">
         <p>END</p>
       </section>
