fix: 画像最適化

--- a/src/pages/works04/index.astro
+++ b/src/pages/works04/index.astro
@@ -66,11 +66,11 @@ import "./scss/style.scss"
       <section class="slider">
         <div class="slider-inner">
           <ul class="slider-list">
-            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
-            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
-            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
-            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
-            <li class="slider-item"><img src="images/works04/section1.png" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.webp" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.webp" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.webp" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.webp" alt=""></li>
+            <li class="slider-item"><img src="images/works04/section1.webp" alt=""></li>
           </ul>
         </div>
       </section>
