--- a/src/pages/works04/scss/style.scss
+++ b/src/pages/works04/scss/style.scss
@@ -17,7 +17,7 @@ section {
 
   @for $i from 1 through 5 {
     &:nth-child(#{$i + 1}) {
-      background-image: url(images/works04/section#{$i}.png);
+      background-image: url(images/works04/section#{$i}.webp);
     }
   }
 }
@@ -43,7 +43,14 @@ section {
   display: flex;
   align-items: center;
   height: 200vh;
-  margin-left: 10%;
+  padding: 10%;
+
+  backdrop-filter: blur(5px);
+}
+
+.wrapper.is-active {
+  backdrop-filter: blur(0);
+  transition: 1s ease-in;
 }
 
 .content {
@@ -98,10 +105,12 @@ section {
   gap: 10%;
   margin-left: 10%;
   margin-right: 10%;
+
+  will-change: transform;
 }
 
 .slider-item {
-  flex-shrink: 0;
+  flex: 0 0 auto;
   width: 80%;
 
   img {
