add: text-animation

--- a/src/pages/works04/index.astro
+++ b/src/pages/works04/index.astro
@@ -15,10 +15,29 @@ import "./scss/style.scss"
 	</head>
 	<body>
     <main>
-      <section class="hero">
-        <div class="hero-inner">
-          <h1>Welcome to TOKYO</h1>
-        </div>
+      <section class="sample-text">
+        <ul class="sample-text__list">
+          <li class="sample-text__item">
+            <div class="sample1">
+              <p>テキストテキスト</p>
+            </div>
+          </li>
+          <li class="sample-text__item">
+            <div class="sample2">
+              <p>テキストテキスト</p>
+            </div>
+          </li>
+          <li class="sample-text__item">
+            <div class="sample3">
+              <p>テキストテキスト</p>
+            </div>
+          </li>
+          <li class="sample-text__item">
+            <div class="sample4">
+              <p>テキストテキスト</p>
+            </div>
+          </li>
+        </ul>
       </section>
       <section>
         <div class="wrapper">
