--- a/src/pages/works04/index.astro
+++ b/src/pages/works04/index.astro
@@ -24,7 +24,7 @@ import "./scss/style.scss"
           </li>
           <li class="sample-text__item">
             <div class="sample2">
-              <p>テキストテキスト</p>
+              <p>TEXTTEXT</p>
             </div>
           </li>
           <li class="sample-text__item">
