--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,7 @@ import "./style.css"
 					<li><a href="/works02">works02</a></li>
 					<li><a href="/works03">works03</a></li>
 					<li><a href="/works04">works04</a></li>
+					<li><a href="/works05">works05</a></li>
 				</ul>
 			</div>
 		</main>
